# BetterPDF

./: .gitignore  =6.5.0  CLAUDE.md  LICENSE  README.md  UI_IMPROVEMENTS.md  WEB_UI_ARCHITECTURE.md  main.py  pyproject.toml  requirements.txt  web_ui_demo.py
.github/workflows/: deploy-pages.yml  deploy-site.yml  release-windows.yml
backend/: __init__.py  ai_service.py  api.py  document_engine.py  docx_engine.py  engine_factory.py  pdf_engine.py  persistence.py  pptx_engine.py  txt_engine.py
backend/ai/: __init__.py  agent.py  chat_session.py  prompts.py  service.py  tools.py
backend/ocr/: engine.py  normalize.py  pipeline.py  rendering.py
docs/: architect.md  implementation_plan_v0.3.md  ocr_integration.md  ocr_release_postmortem_v0.1.10.md  pdf2image_migration_guide.md  recontruct_0.1.17.md  windows_release.md
docs/sessions/: 2026-02-20-text-engine-code-walkthrough.md  2026-03-03-ai-module-tool-calling-agents.md
frontend/: index.html
frontend/css/: main.css
frontend/js/: api-client.js  app.js  pdf-viewer.js
installer/: BetterPDF.iss
scripts/: build_windows.ps1  prefetch_ocr_models.py  run_ocr_pipeline.py
tests/: conftest.py  test_ai_service.py  test_api_persistence.py  test_ocr_engine.py  test_ocr_normalize.py  test_ocr_pipeline.py  test_ocr_rendering.py
ui/: __init__.py  main_window.py
ui/ai_panel/: __init__.py  chat_widget.py  context_menu.py  message_bubble.py
ui/components/: __init__.py  toast.py
ui/note_editor/: __init__.py  editor_widget.py  preview_widget.py
ui/pdf_viewer/: __init__.py  selection_layer.py  viewer_widget.py
(+9 files in other folders)
