[project]
name = "deepread-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "paddleocr[all]>=3.4.0",
    "paddlepaddle==3.2.0",
    "pdf2image>=1.17.0",
    "pillow>=10.0",
    "pymupdf>=1.23",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pywebview>=4.4",
    "requests>=2.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
