[project]
name = "deepread-ai"
version = "0.1.15"
description = "Desktop PDF reader with OCR and AI integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "paddleocr[all]>=3.4.0",
    "paddlepaddle==3.2.0",
    "pillow>=10.0",
    "pymupdf>=1.23",
    "python-docx>=1.1.0",
    "pywebview>=4.4",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
build = [
    "pyinstaller>=6.11.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
